--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                                     <i class="fas fa-user me-2"></i> <span data-translate="personal-info">Informations personnelles</span>
                                 </h3>
                                 <ul class="list-unstyled">
-                                    <li><strong data-translate="age">Âge :</strong> <span data-translate="age-value">26 ans</span></li>
+                                    <li><strong data-translate="age">Âge :</strong> <span>26 ans</span></li>
                                     <li><strong data-translate="location">Localisation :</strong> <span>Garéoult, Var (France)</span></li>
                                     <li><strong data-translate="phone">Téléphone :</strong> +33 6 26 58 28 97</li>
                                     <li><strong data-translate="email">Adresse mail :</strong> reaultn@gmail.com</li>
@@ -369,7 +369,7 @@
                                             <div class="col-md-8">
                                                 <h6 data-translate="design-1-1">Jeu vidéo</h6>
                                                 <ul>
-                                                    <li data-translate="design-1-2">Narrative Design : Écrire des scénarii cohérents à la fois eux-même et avec leur gameplay</li>
+                                                    <li data-translate="design-1-2">Narrative Design : Écrire des scénarii cohérents à la fois avec eux-même et avec leur gameplay</li>
                                                     <li data-translate="design-1-3">Level Design : Concevoir des niveaux structurés et thématisés</li>
                                                     <li data-translate="design-1-4">Quest Design : Créer des quêtes ludiques et interactives</li>
                                                 </ul>
