--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     <meta name="twitter:image" content="profil.jpg">
 
     <!-- Favicons dans l'onglet de la barre d'adresse (ajuste les chemins si besoin) -->
-    <link rel="icon" href="images/Logo-CV-Clair.png" sizes="any">
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" href="images/Logo-CV-Clair.png" type="image/png" sizes="any">
+    <!-- <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"> -->
 
     <!-- Couleur du thème pour mobile -->
     <meta name="theme-color" content="#00f5ff">
