--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
             <!-- LOGO -->
             <a class="navbar-brand me-1" href="index.html">
-            CV <img src="images/Logo-CV-Sombre.png" alt="Logo du CV" width="48" height="48" class="me-2 rounded img-fluid" style="border: 2px solid #fff;" id="logo">
+                <img src="images/Logo-CV-Sombre.png" alt="Logo du CV" width="48" height="48" class="me-2 rounded img-fluid" style="border: 2px solid #fff;" id="logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-label="Menu de navigation">
             <span class="navbar-toggler-icon">
